--- a/index.html
+++ b/index.html
@@ -1,15 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/fevicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Health Care" />
     <meta
-    name="keywords"
-    content="Health, life, protection"
+      name="description"
+      content="Discover personalized health care services designed for every stage of life. From elderly care and nanny services to child care and mental wellness support, we provide comprehensive solutions that promote health, safety, and well-being. Explore our on-demand care options, tailored wellness programs, and benefits for individuals and businesses alike."
     />
-    <title>Phyber</title>
+    <meta
+      name="keywords"
+      content="Health, Life, Protection, Caregiver, Elderly Care, Nanny, Child Care, Mental Wellness, Health Benefits, Wellness Programs, Personal Care, Medical Services, Family Health"
+    />
+
+    <meta
+      property="og:title"
+      content="phyber - Personalized Health Care Services"
+    />
+    <meta
+      property="og:description"
+      content="Discover personalized health care services designed for every stage of life, from elderly care and nanny services to child care and mental wellness support. Comprehensive solutions for individuals and businesses."
+    />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:url" content="https://phybercare.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card setup -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Discover Comprehensive Health Care with phyber"
+    />
+    <meta
+      name="twitter:description"
+      content="Explore phyber's range of personalized health services, including elderly care, nanny services, mental wellness, and more."
+    />
+    <meta name="twitter:image" content="/logo.png" />
+
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#2A6DBD" />
+    <meta http-equiv="content-language" content="en" />
+    <meta name="author" content="Website created by Pradum Kumar Dubey for phyber Health Care Services" />
+
+    <title>phyber</title>
   </head>
   <body>
     <div id="root"></div>
